syntax = "proto3";
package VrLifeServer.Networking.NetworkingModels;

message UserMsg	{ // user, lobby and group management message

}